# learnopengl

./: .gitignore  .gitmodules  CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.h  resource.h
src/01_getting_started/01_01_hello_window/: hello_window.cpp
src/01_getting_started/01_02_hello_window_clear/: hello_window_clear.cpp
src/01_getting_started/02_01_hello_triangle/: hello_triangle.cpp  hello_triangle.frag
src/01_getting_started/02_02_hello_triangle_indexed/: hello_triangle_indexed.cpp
src/01_getting_started/02_03_hello_triangle_exercise1/: hello_triangle_exercise1.cpp
src/01_getting_started/02_04_hello_triangle_exercise2/: hello_triangle_exercise2.cpp
src/01_getting_started/02_05_hello_triangle_exercise3/: hello_triangle_exercise3.cpp  hello_triangle_exercise3.frag  hello_triangle_exercise3_alt.frag
src/01_getting_started/03_01_shaders_uniform/: shaders_uniform.cpp  shaders_uniform.frag  shaders_uniform.vert
src/01_getting_started/03_02_shaders_interpolation/: shaders_interpolation.cpp  shaders_interpolation.frag  shaders_interpolation.vert
src/01_getting_started/04_01_textures/: textures.cpp  textures.frag
src/01_getting_started/04_02_textures_combined/: textures_combined.cpp
src/01_getting_started/04_03_textures_exercise1/: textures_exercise1.cpp  textures_exercise1.frag
src/01_getting_started/04_04_textures_exercise2/: textures_exercise2.cpp
src/01_getting_started/04_05_textures_exercise3/: textures_exercise3.cpp  textures_exercise3.frag
src/01_getting_started/04_06_textures_exercise4/: textures_exercise4.cpp  textures_exercise4.frag  textures_exercise4.vert
src/01_getting_started/05_01_transformations/: transformations.cpp  transformations.vert
src/01_getting_started/05_01_transformations_exercise1/: transformations_exercise1.cpp
src/01_getting_started/05_02_transformations_exercise1/: transformations_exercise1.cpp  transformations_exercise1.frag
src/01_getting_started/05_02_transformations_exercise2/: transformations_exercise2.cpp
src/01_getting_started/05_03_transformations_exercise2/: transformations_exercise2.cpp
src/01_getting_started/06_01_coordinate_systems/: coordinate_systems.cpp  coordinate_systems.frag  coordinate_systems.vert
src/01_getting_started/06_02_coordinate_systems_depth/: coordinate_systems_depth.cpp
src/01_getting_started/06_03_coordinate_systems_multiple/: coordinate_systems_multiple.cpp
src/01_getting_started/06_04_coordinate_systems_exercise3/: coordinate_systems_exercise3.cpp
